2008-01-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_drain),
	(gst_ffmpegdec_sink_event), (gst_ffmpegdec_chain):
	Flush delayed frames on DISCONT if we have them.

2008-01-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_video_frame),
	(gst_ffmpegdec_chain):
	Flush on DISCONT because ffmpeg does not reliably tell us about
	keyframes.

2008-01-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_init),
	(gst_ffmpegdec_open), (gst_ffmpegdec_get_buffer),
	(gst_ffmpegdec_release_buffer), (gst_ffmpegdec_video_frame),
	(gst_ffmpegdec_sink_event), (gst_ffmpegdec_chain):
	Rewrite timestamping code to let ffmpeg track timestamps.
	Fixes #482660, #337866.

2008-01-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (clear_queued), (flush_queued),
	(gst_ffmpegdec_video_frame), (gst_ffmpegdec_frame),
	(gst_ffmpegdec_sink_event), (gst_ffmpegdec_change_state):
	Add basic reverse playback for video.

2008-01-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* autogen.sh:
	  Add -Wno-portability to the automake parameters to stop warnings
	  about GNU make extensions being used. We require GNU make in almost
	  every Makefile anyway.
	  
	* configure.ac:
	  Use AM_PROG_CC_C_O as a compiler that accepts both -c and -o
	  at the same time is required for per target flags.

2008-01-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	postproc needs some headers present in libavcodec/*.h

2008-01-09  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/ext/Makefile.am:
	  Remove trailing whitespace as warned by automake.

2008-01-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_register):
	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_register):
	Don't register the WavPack demuxer and decoder. They don't work,